<resources>
    <string name="app_name">salmon</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string-array name="port">
        <item>USB</item>
        <item>NET</item>
        <item>BT</item>
        <item>Serial</item>
        <item>MAC</item>
    </string-array>
    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
    <string name="connect">Connect</string>
    <string name="disconnect">Disconnect</string>
    <string name="hint">Please input IP</string>
    <string name="context_and_code">print context,lineAndBarCode</string>
    <string name="image">Print Image</string>
    <string name="text">Print text</string>
    <string name="print_table">Print Table</string>
    <string name="barcode">Print barCode</string>
    <string name="bt_select">Please select BLE dev</string>
    <string name="usb_select">Please select USB dev</string>
    <string name="cannot_find_serial">Serial port not found</string>
    <string name="send_failed">Send Failed</string>
    <string name="usb_pre_con">present connected Usb dev:</string>
    <string name="con_success">Connect success</string>
    <string name="con_failed">Connect failed</string>
    <string name="con_has_disconnect">connection has disconnected</string>
    <string name="start_pos_activity">Start ESC Print</string>
    <string name="start_tsc_activity">Start TSC Printer</string>
    <string name="start_cpcl_activity">Start CPCL Printer</string>
    <string name="start_zpl_activity">Start ZPL Printer</string>
    <string name="qrcode">Print QRCode</string>
    <string name="none_ipaddress">please input the ipaddress first!</string>
    <string name="none_mac_address">please select printer</string>
    <string name="connect_first">please connect the printer first!</string>
    <string name="check_link">checkLink</string>
    <string name="self_check">self check</string>
    <string name="all_device">All devices</string>
    <string name="refresh">Refresh</string>
    <string name="paired">Paired</string>
    <string name="query_status">Query printer status</string>
    <string name="request_permission_fail">Failed to obtain permission</string>
    <string name="pls_agree_bluetooth_permission">Please agree to Bluetooth permissions</string>
    <string name="please_device">please select device</string>
    <string name="usb_detached">USB DETACHED</string>
    <string name="usb_attached">USB ATTACHED</string>
    <string name="printer_normal">printer normal</string>
    <string name="printer_front_cover_open">printer front cover open</string>
    <string name="printer_out_of_paper">printer out of paper</string>
    <string name="printer_status">printer status</string>
    <string name="open_cash_drawer">Open Cash Drawer</string>
    <string name="sample">sample</string>
    <string name="print_text">print text</string>
    <string name="print_barcode">print barcode</string>
    <string name="print_barcode2">print barcode2</string>
    <string name="print_qrcode">print qrcode</string>
    <string name="custom_fonts">Custom Fonts</string>
    <string name="set_bluetooth">Set Bluetooth</string>
    <string name="set_net">set net</string>
    <string name="wifi_config">wifi config</string>
    <string name="about">About</string>
    <string name="bluetooth_is_not_available">Bluetooth is not Available</string>
    <string name="bluetooth_is_available">Bluetooth is Available</string>
    <string name="on">On</string>
    <string name="off">Off</string>
</resources>